// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component Render it as a button 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    ahref=""
    link=""
    onClickCallback={[Function]}
    theme="primary"
>
    This is a Button
</Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "This is a Button",
      "className": "btn btn-primary",
      "onClick": [Function],
    },
    "ref": null,
    "rendered": "This is a Button",
    "type": "button",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "This is a Button",
        "className": "btn btn-primary",
        "onClick": [Function],
      },
      "ref": null,
      "rendered": "This is a Button",
      "type": "button",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Button Component should render a 'a' link 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    ahref=""
    href="http://google.com"
    link=""
    onClickCallback={[Function]}
    theme="primary"
>
    This is a href link!
</Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "This is a href link!",
      "className": "btn btn-primary",
      "onClick": [Function],
    },
    "ref": null,
    "rendered": "This is a href link!",
    "type": "button",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "This is a href link!",
        "className": "btn btn-primary",
        "onClick": [Function],
      },
      "ref": null,
      "rendered": "This is a href link!",
      "type": "button",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Button Component should render a react router Link 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    ahref=""
    link="/home"
    onClickCallback={[Function]}
    theme="primary"
>
    This is a React Router Link!
</Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": "This is a React Router Link!",
      "className": "btn btn-primary",
      "replace": false,
      "to": "/home",
    },
    "ref": null,
    "rendered": "This is a React Router Link!",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": "This is a React Router Link!",
        "className": "btn btn-primary",
        "replace": false,
        "to": "/home",
      },
      "ref": null,
      "rendered": "This is a React Router Link!",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
